--- a/ur10e_eye_to_base_calibration/calibration/config.yml
+++ b/ur10e_eye_to_base_calibration/calibration/config.yml
@@ -49,26 +49,26 @@
     # Supported patterns are:
     # - chessboard
     # - charuco
-    "pattern_type": "chessboard",
+    "pattern_type": "charuco",
     # If the pattern type is "charuco" you need to define
     # the aruco dictionary used by the pattern.
     # See https://docs.opencv.org/trunk/dc/df7/dictionary_8hpp.html
     "dictionary": "DICT_5X5_100",
     # Mesh file (collada.dae or stl) for showing pattern on rviz
     "mesh_file": "package://atom_calibration/meshes/charuco_5X5_800x600.dae",
-    # The border width from the edge corner to the pattern physical edge.
-    # This is used for 3D sensors and lidars.
-    "border_size": 0.5,
+    # The border width from the edge corner to the pattern physical edge. Used for 3D sensors and lidars.
+    # It can be a scalar (same border in x and y directions), or it can be {'x': ..., 'y': ,,,}
+    "border_size": {'x': 0.05, 'y': 0.05},
     # The number of corners the pattern has in the X and Y dimentions.
     # Note: The charuco detector uses the number of squares per dimension in
     # its detector. Internally we add a +1 to Y and X dimensions to account for
     # that. Therfore, the number of corners should be used even for the charuco
     # pattern.
-    "dimension": {"x": 9, "y": 6},
+    "dimension": {"x": 13, "y": 8},
     # The length of the a square edge.
-    "size": 0.101,
+    "size": 0.02,
     # The length of the charuco inner marker.
-    "inner_size": 0.014
+    "inner_size": 0.015
   },
 
   # Miscellaneous information
